# cletyxo

./: .gitignore  .gitmodules  BUILDING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  TODO.txt  cletyxo.kdev4  cletyxo.workspace  cletyxo.workspace.layout  desktop.ini  linker.ld
.cargo/: config.toml
.dist/: LICENSE
.github/workflows/: ci.yml
.kdev4/: cletyxo.kdev4
ClyDE/: README.md
OVMFbin/: OVMF_VARS-pure-efi.fd  README.md
arch/: Makefile
boot/: Makefile  main.c
clib/: Cargo.toml
clib/src/: lib.rs
docs/: CONTRIBUTORS_GUIDE.md  README.md
docs/cmd/: CD.md  CMD_TEMPLATE.md  MAN.md  SUDO.md
documentation/: README.md
drivers/: Cargo.toml
gasm/: Cargo.toml
gasm/src/: lib.rs
gnu-efi/bootloader/: main.c
gnu-efi/x86_64/bootloader/: main.efi
kernel/: Makefile  kernel.ld  run.bat
kernel/src/: ACPI.cpp  ACPI.h  BasicRenderer.cpp  BasicRenderer.h  Bitmap.cpp  Bitmap.h  Core.h  EfiMemory.cpp  EfiMemory.h  Font.h  Framebuffer.h  IO.cpp  IO.h  Kernel.cpp  KernelUtil.cpp  KernelUtil.h  Math.h  Memory.cpp  Memory.h  PCI.cpp  PCI.h  Panic.cpp  Panic.h  cstr.cpp  cstr.h
kernel/src/gdt/: gdt.cpp
kernel/src/interrupts/: IDT.cpp  IDT.h  Interrupts.cpp  Interrupts.h
kernel/src/paging/: PageFrameAllocator.cpp  PageFrameAllocator.h  PageMapIndexer.cpp  PageMapIndexer.h  PageTableManager.cpp  PageTableManager.h  Paging.cpp  Paging.h
kernel/src/userinput/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  kbScancodeTranslation.cpp  kbScancodeTranslation.h
scripts/: make_hdd.sh
stdapps/: README.md
usr/: Cargo.toml
