[package]
name = "cletyxo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "kernel",
    "usr",
    "drivers",
    "gasm",
]

exclude = [
    "clib"
]


[lib]
name = "cletyxo"
path = "kernel/src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
usr = { path = "usr" }
drivers = { path = "drivers" }
gasm = { path = "gasm" }